--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
      needs: [build]
      steps:
       - uses: actions/checkout@v2
-  
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests
         run: npm run test
