--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "node_modules/.bin/eslint index.js"
+    "lint": "eslint index.js --fix"
   },
   "dependencies": {
     "jest": "^18.1.0"
